feat: Implement initial mobile ERP application structure with authentication, core features, UI components, and services.

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "mobile-erp-app",
+    "name": "MyShop Pro",
     "slug": "mobile-erp-app",
     "version": "1.0.0",
     "orientation": "portrait",
